docs: general improvements
Signed-off-by: Jiri Kuncar <jiri.kuncar@cern.ch>

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Contact us at `info@invenio-software.org <mailto:info@invenio-software.org>`_
 Contributors
 ^^^^^^^^^^^^
 * Lars Holm Nielsen <lars.holm.nielsen@cern.ch>
+* Jiri Kuncar <jiri.kuncarn@cern.ch>
