--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,5 @@ Contributors
 ^^^^^^^^^^^^
 * Lars Holm Nielsen <lars.holm.nielsen@cern.ch>
 * Jiri Kuncar <jiri.kuncarn@cern.ch>
+* Jan Aage Lavik <jan.age.lavik@cern.ch>
+* Tibor Simko <tibor.simko@cern.ch>
