AUTHORS: addition of Anthony Sottile
Signed-off-by: Tibor Simko <tibor.simko@cern.ch>

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Contributors
 * Jiri Kuncar <jiri.kuncarn@cern.ch>
 * Jan Aage Lavik <jan.age.lavik@cern.ch>
 * Tibor Simko <tibor.simko@cern.ch>
+* Anthony Sottile <asottile@umich.edu>
