--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,9 @@
 Authors
 -------
 
-setuptools-bower is developed for use in `Invenio <http://invenio-software.org>`_ digital library software.
+setuptools-bower is developed for use in `Invenio <http://inveniosoftware.org>`_ digital library software.
 
-Contact us at `info@invenio-software.org <mailto:info@invenio-software.org>`_
+Contact us at `info@inveniosoftware.org <mailto:info@inveniosoftware.org>`_
 
 Contributors
 ^^^^^^^^^^^^
